testsuite/tests/typecheck/should_fail/T17566b.stderr

T17566b.hs:7:17: error:
    • Couldn't match ‘k1’ with ‘k2’
    • In the class declaration for ‘C’
